tests/NormalTests/paczka1/fuzzy1/52789136.err
Error in line 12: cEum S462 37,2
Error in line 28: VVV A831 62,2
Error in line 30: VVV S462 95,8
Error in line 34: NIYenEi A831 92,99
Error in line 38: yDg S180 77,7
